@@ -70,15 +70,17 @@ CLEANFILES = configmake.h configmake.h-t
 ## end configmake
 
 EXTRA_DIST = lookup3.c autogen.sh CHANGES  \
-	footer_no_timestamp.html libpopt.vers README-prereq\
-	$(TESTS) test-poptrc\
+	footer_no_timestamp.html libpopt.vers README-prereq \
+	$(TESTS) test-poptrc \
 	popt.xcodeproj/project.pbxproj \
 	popt.ps Doxyfile 	test3-data/01.answer \
 				test3-data/01.input \
 				test3-data/02.answer \
 				test3-data/02.input \
 				test3-data/03.answer \
-				test3-data/03.input
+				test3-data/03.input \
+                                Makefile.mingw \
+                                config.h.mingw
 
 SUBDIRS = po . auto
 
@@ -108,7 +110,7 @@ tdict_LDADD  = $(top_builddir)/$(usrlib_LTLIBRARIES)
 test3_LDADD  = $(top_builddir)/$(usrlib_LTLIBRARIES)
 
 TESTS_ENVIRONMENT = top_srcdir=$(top_srcdir) MUDFLAP_OPTIONS="$(MUDFLAP_OPTIONS)" testpoptrc="$(top_srcdir)/test-poptrc" PATH=.:../src:$$PATH \
-                        $(VALGRIND_ENVIRONMENT) \
+                        valgrind_environment="$(VALGRIND_ENVIRONMENT)" \
 			$(SHELL)
 
 
@@ -120,7 +122,7 @@ usrlibdir = $(libdir)
 usrlib_LTLIBRARIES = libpopt.la
 
 libpopt_la_SOURCES = popt.c poptparse.c poptconfig.c popthelp.c poptint.c
-libpopt_la_LDFLAGS = -no-undefined @LTLIBINTL@ @LTLIBICONV@ $(AM_LDFLAGS)
+libpopt_la_LDFLAGS = -no-undefined $(AM_LDFLAGS)
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = popt.pc
